<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/ic_movies"
        android:title="@string/nav_movies"/>

    <item
        android:id="@+id/nav_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/nav_tv"/>

    <item
        android:id="@+id/nav_manga"
        android:icon="@drawable/ic_manga"
        android:title="Manga"/>

    <item
        android:id="@+id/nav_novel"
        android:icon="@drawable/ic_novel"
        android:title="Novel"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"/>

</menu>